debug href of index

--- a/src/pages/category.html
+++ b/src/pages/category.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="../assets/styles/reset.css" />
 	<link rel="stylesheet" type="text/css" href="../assets/styles/iconfont.css">
     <link rel="stylesheet" type="text/css" href="../assets/styles/category.css" />
-    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
+    <script src="../assets/javascript/jquery.min.js"></script>
 </head>
 <body>
     <!--公共头部-->
