--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -216,13 +216,13 @@
 								<img src="https://i1.mifile.cn/a4/xmad_15531711416212_ZCfRS.jpg" alt="类目图片" />
 							</a>
 							<div class="goods-name">
-								<a class="goods-title" href="javascript:void(0);">类目</a>
+								<a class="goods-title" href="category.html">类目</a>
 							</div>
 							<section class="detail-recommend">
 								<div class="detail-recommend-slider center">
 									<ul class="detail-recommend-slider-wrap" style="width: 1000%; transition-duration: 0s; transform: translate3d(0px, 0px, 0px);">
 										<li class="detail-rs-item">
-											<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="category.html">
+											<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="details.html">
 												<div class="mod-pic">
 													<img class="lazy" src="https://openfile.meizu.com/group1/M00/05/E1/Cgbj0FtqgmuAHzQbAAflWG0_wvs749.png680x680.jpg" width="180" height="180" draggable="false">
 												</div>
@@ -241,7 +241,7 @@
 											</a>
 										</li>
 										<li class="detail-rs-item">
-											<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="category.html">
+											<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="details.html">
 												<div class="mod-pic">
 													<img class="lazy" src="https://openfile.meizu.com/group1/M00/05/E1/Cgbj0FtqgmuAHzQbAAflWG0_wvs749.png680x680.jpg" width="180" height="180" draggable="false">
 												</div>
@@ -260,7 +260,7 @@
 											</a>
 										</li>
 										<li class="detail-rs-item">
-											<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="category.html">
+											<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="details.html">
 												<div class="mod-pic">
 													<img class="lazy" src="https://openfile.meizu.com/group1/M00/05/E1/Cgbj0FtqgmuAHzQbAAflWG0_wvs749.png680x680.jpg" width="180" height="180" draggable="false">
 												</div>
@@ -279,7 +279,7 @@
 											</a>
 										</li>
 										<li class="detail-rs-item">
-											<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="category.html">
+											<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="details.html">
 												<div class="mod-pic">
 													<img class="lazy" src="https://openfile.meizu.com/group1/M00/05/E1/Cgbj0FtqgmuAHzQbAAflWG0_wvs749.png680x680.jpg" width="180" height="180" draggable="false">
 												</div>
@@ -312,7 +312,7 @@
 								<div class="detail-recommend-slider center">
 									<ul class="detail-recommend-slider-wrap" style="width: 1000%; transition-duration: 0s; transform: translate3d(0px, 0px, 0px);">
 										<li class="detail-rs-item">
-											<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="category.html">
+											<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="details.html">
 												<div class="mod-pic">
 													<img class="lazy" src="https://openfile.meizu.com/group1/M00/05/E1/Cgbj0FtqgmuAHzQbAAflWG0_wvs749.png680x680.jpg" width="180" height="180" draggable="false">
 												</div>
@@ -331,7 +331,7 @@
 											</a>
 										</li>
 										<li class="detail-rs-item">
-											<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="category.html">
+											<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="details.html">
 												<div class="mod-pic">
 													<img class="lazy" src="https://openfile.meizu.com/group1/M00/05/E1/Cgbj0FtqgmuAHzQbAAflWG0_wvs749.png680x680.jpg" width="180" height="180" draggable="false">
 												</div>
