--- a/src/pages/getOrderInfo.html
+++ b/src/pages/getOrderInfo.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" type="text/css" href="../assets/styles/getOrderInfo.css" />
     <link rel="stylesheet" type="text/css" href="../assets/styles/iconfont.css" />
     <script src="../assets/javascript/jquery.min.js"></script>
-    <script type="text/javascript" src="../assets/javascript/address.js"></script>
 </head>
 <body>
         <!--公共头部-->
@@ -29,9 +28,11 @@
         <!--主体内容开始-->
         <div class="order">
             <div class="main">
+                <!-- 地址操作部分 -->
                 <div class="order-address">
                     <div class="order-address-title">收货人信息</div>
                     <ul class="order-address-list">
+                        <!-- 已经写好的地址 -->
                         <li class="order-address-check checked">
                             <div class="order-address-check-top">
                                 <div class="order-address-check-name">徐**</div>
@@ -81,12 +82,14 @@
                                 <div class="edit">修改</div>
                             </div>
                         </li>
+                        <!-- 新增地址部分 -->
                         <li class="order-address-check add">
                             <div class="order-address-icon" id="add"><span class="iconfont icon-zengjia"></span></div>
                             <div class="order-address-add-text">添加新的地址</div>
                         </li>
                     </ul>
                 </div>
+                <!-- 订单信息部分 -->
                 <div class="order-product">
                     <div class="product-title">确认订单信息
                         <button class="shoppingCart"><a href="shoppingcart.html" alt="返回购物车">返回购物车</a></button>
@@ -159,6 +162,7 @@
                         </table>
                     </div>
                 </div>
+                <!-- 支付方式 -->
                 <div class="order-tatal">
                     <div class="order-tatal-pay">
                         <div class="order-tatal-pay-header">选择支付方式</div>
@@ -183,6 +187,7 @@
                             </div>
                         </div>
                     </div>
+                    <!-- 产品部分的尾部 -->
                     <div class="order-tatal-content">
                         <div class="order-tatal-row">总金额：
                             <div class="order-tatal-price">￥1000</div>
@@ -286,10 +291,12 @@
         <!-- 弹窗部分 -->
         <div id="background" class="back">
             <div id="div1" class="content">
+                <!-- 弹窗头部 -->
                 <div id="close">
                     <h2 class="title">地址操作</h2>
                     <span id="close-button">×</span>
                 </div>
+                <!-- 弹窗中间的部分 -->
                 <div id="div2">
                     <div class="top">
                         <div class="top-left"><span>收货人姓名</span>
@@ -313,6 +320,7 @@
                     <div class="bottom"><span>详细地址</span>
                         <input type="text" class="detail">
                     </div>
+                    <!-- 弹窗后面的部分 -->
                     <div class="button-two">
                         <button class="confirm">确&nbsp认</button>
                         <button class="cancel">取&nbsp消</button>
@@ -320,7 +328,9 @@
                 </div>
             </div>
         </div>
+<script type="text/javascript" src="../assets/javascript/address.js"></script>
 <script type="text/javascript">  
+    // 省市区三级联动
     addressInit('cmbProvince', 'cmbCity', 'cmbArea');  
 </script>
 <script type="text/javascript" src="../assets/javascript/getOrderInfo.js"></script>
