--- a/src/pages/category.html
+++ b/src/pages/category.html
@@ -222,9 +222,7 @@
 								<a href="#" class="all-sale active">全部</a>
 								<a href="#" class="new-goods">新品</a>
 								<a href="#" class="nice-sale">畅销</a>
-								<a class="sort-price iconfont icon-xiangxiajiantou" href="#">
-									价格
-								</a>
+								<a class="sort-price iconfont icon-xiangxiajiantou" href="#">价格</a>
 							</div>
 						</div>
 						<div class="goods-group">
