--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -23,10 +23,10 @@
 						<!--头部未登录时状态栏 开始-->
 						<ul class="unloaded-nav">
 							<li class="status">
-								<a href="javascript:void(0);">登录</a>
+								<a href="loading.html">登录</a>
 							</li>
 							<li class="status">
-								<a href="javascript:void(0);">注册</a>
+								<a href="register.html">注册</a>
 							</li>
 							<!--mini-购物车栏开始-->
 							<li class="mini-cart">
@@ -91,7 +91,7 @@
 											<span class="cart-price"><em>378</em>元</span>
 										</div>
 										<div class="cart-right">
-											<a class="btn-cart" href="javascript:void(0);">去购物车结算</a>
+											<a class="btn-cart" href="shoppingcart.html">去购物车结算</a>
 										</div>
 									</div>
 								</div>
@@ -166,7 +166,7 @@
 											<span class="cart-price"><em>378</em>元</span>
 										</div>
 										<div class="cart-right">
-											<a class="btn-cart" href="javascript:void(0);">去购物车结算</a>
+											<a class="btn-cart" href="shoppingcart.html">去购物车结算</a>
 										</div>
 									</div>
 								</div>
@@ -205,23 +205,21 @@
 					<span class="iconfont icon-xiangzuojiantou slide-left" data-icon=""></span>
 					<span class="iconfont icon-xiangyoujiantou slide-right" data-icon=""></span>
 				</div>
-				<!--<span class="slide-left">上一张</span>
-				<span class="slide-right">下一张</span>-->
 			</div>
 			<!--轮播图部分 结束-->
 			<div class="goods-block">
 				<div class="goods-container">
 					<div class="goods-group">
-						<a href="javascript:void(0);" class="">
+						<a href="category.html" class="">
 							<img src="https://i1.mifile.cn/a4/xmad_15531711416212_ZCfRS.jpg" alt="类目图片" />
 						</a>
 						<div class="goods-name">
-							<a class="goods-title" href="javascript:void(0);">类目</a>
+							<a class="goods-title" href="category.html">类目</a>
 						</div>
 						<div class="detail-recommend">
 							<ul class="detail-recommend-slider-wrap">
 								<li class="detail-rs-item">
-									<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="category.html">
+									<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="details.html">
 										<div class="mod-pic">
 											<img class="lazy" src="https://openfile.meizu.com/group1/M00/05/E1/Cgbj0FtqgmuAHzQbAAflWG0_wvs749.png680x680.jpg" width="180" height="180" draggable="false">
 										</div>
@@ -240,7 +238,7 @@
 									</a>
 								</li>
 								<li class="detail-rs-item">
-									<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="category.html">
+									<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="details.html">
 										<div class="mod-pic">
 											<img class="lazy" src="https://openfile.meizu.com/group1/M00/05/E1/Cgbj0FtqgmuAHzQbAAflWG0_wvs749.png680x680.jpg" width="180" height="180" draggable="false">
 										</div>
@@ -259,7 +257,7 @@
 									</a>
 								</li>
 								<li class="detail-rs-item">
-									<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="category.html">
+									<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="details.html">
 										<div class="mod-pic">
 											<img class="lazy" src="https://openfile.meizu.com/group1/M00/05/E1/Cgbj0FtqgmuAHzQbAAflWG0_wvs749.png680x680.jpg" width="180" height="180" draggable="false">
 										</div>
@@ -278,7 +276,7 @@
 									</a>
 								</li>
 								<li class="detail-rs-item">
-									<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="category.html">
+									<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="details.html">
 										<div class="mod-pic">
 											<img class="lazy" src="https://openfile.meizu.com/group1/M00/05/E1/Cgbj0FtqgmuAHzQbAAflWG0_wvs749.png680x680.jpg" width="180" height="180" draggable="false">
 										</div>
@@ -297,7 +295,7 @@
 									</a>
 								</li>
 								<li class="detail-rs-item">
-									<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="category.html">
+									<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="details.html">
 										<div class="mod-pic">
 											<img class="lazy" src="https://openfile.meizu.com/group1/M00/05/E1/Cgbj0FtqgmuAHzQbAAflWG0_wvs749.png680x680.jpg" width="180" height="180" draggable="false">
 										</div>
@@ -316,7 +314,7 @@
 									</a>
 								</li>
 								<li class="detail-rs-item">
-									<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="category.html">
+									<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="details.html">
 										<div class="mod-pic">
 											<img class="lazy" src="https://openfile.meizu.com/group1/M00/05/E1/Cgbj0FtqgmuAHzQbAAflWG0_wvs749.png680x680.jpg" width="180" height="180" draggable="false">
 										</div>
@@ -335,7 +333,7 @@
 									</a>
 								</li>
 								<li class="detail-rs-item">
-									<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="category.html">
+									<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="details.html">
 										<div class="mod-pic">
 											<img class="lazy" src="https://openfile.meizu.com/group1/M00/05/E1/Cgbj0FtqgmuAHzQbAAflWG0_wvs749.png680x680.jpg" width="180" height="180" draggable="false">
 										</div>
@@ -354,7 +352,7 @@
 									</a>
 								</li>
 								<li class="detail-rs-item">
-									<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="category.html">
+									<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="details.html">
 										<div class="mod-pic">
 											<img class="lazy" src="https://openfile.meizu.com/group1/M00/05/E1/Cgbj0FtqgmuAHzQbAAflWG0_wvs749.png680x680.jpg" width="180" height="180" draggable="false">
 										</div>
@@ -376,16 +374,16 @@
 						</div>
 					</div>
 				<div class="goods-group">
-						<a href="javascript:void(0);" class="">
+						<a href="category.html" class="">
 							<img src="https://i1.mifile.cn/a4/xmad_15531711416212_ZCfRS.jpg" alt="类目图片" />
 						</a>
 						<div class="goods-name">
-							<a class="goods-title" href="javascript:void(0);">类目</a>
+							<a class="goods-title" href="category.html">类目</a>
 						</div>
 						<div class="detail-recommend">
 							<ul class="detail-recommend-slider-wrap">
 								<li class="detail-rs-item">
-									<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="category.html">
+									<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="details.html">
 										<div class="mod-pic">
 											<img class="lazy" src="https://openfile.meizu.com/group1/M00/05/E1/Cgbj0FtqgmuAHzQbAAflWG0_wvs749.png680x680.jpg" width="180" height="180" draggable="false">
 										</div>
@@ -404,7 +402,7 @@
 									</a>
 								</li>
 								<li class="detail-rs-item">
-									<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="category.html">
+									<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="details.html">
 										<div class="mod-pic">
 											<img class="lazy" src="https://openfile.meizu.com/group1/M00/05/E1/Cgbj0FtqgmuAHzQbAAflWG0_wvs749.png680x680.jpg" width="180" height="180" draggable="false">
 										</div>
@@ -423,7 +421,7 @@
 									</a>
 								</li>
 								<li class="detail-rs-item">
-									<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="category.html">
+									<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="details.html">
 										<div class="mod-pic">
 											<img class="lazy" src="https://openfile.meizu.com/group1/M00/05/E1/Cgbj0FtqgmuAHzQbAAflWG0_wvs749.png680x680.jpg" width="180" height="180" draggable="false">
 										</div>
@@ -442,7 +440,7 @@
 									</a>
 								</li>
 								<li class="detail-rs-item">
-									<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="category.html">
+									<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="details.html">
 										<div class="mod-pic">
 											<img class="lazy" src="https://openfile.meizu.com/group1/M00/05/E1/Cgbj0FtqgmuAHzQbAAflWG0_wvs749.png680x680.jpg" width="180" height="180" draggable="false">
 										</div>
@@ -461,7 +459,7 @@
 									</a>
 								</li>
 								<li class="detail-rs-item">
-									<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="category.html">
+									<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="details.html">
 										<div class="mod-pic">
 											<img class="lazy" src="https://openfile.meizu.com/group1/M00/05/E1/Cgbj0FtqgmuAHzQbAAflWG0_wvs749.png680x680.jpg" width="180" height="180" draggable="false">
 										</div>
@@ -480,7 +478,7 @@
 									</a>
 								</li>
 								<li class="detail-rs-item">
-									<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="category.html">
+									<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="details.html">
 										<div class="mod-pic">
 											<img class="lazy" src="https://openfile.meizu.com/group1/M00/05/E1/Cgbj0FtqgmuAHzQbAAflWG0_wvs749.png680x680.jpg" width="180" height="180" draggable="false">
 										</div>
@@ -499,7 +497,7 @@
 									</a>
 								</li>
 								<li class="detail-rs-item">
-									<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="category.html">
+									<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="details.html">
 										<div class="mod-pic">
 											<img class="lazy" src="https://openfile.meizu.com/group1/M00/05/E1/Cgbj0FtqgmuAHzQbAAflWG0_wvs749.png680x680.jpg" width="180" height="180" draggable="false">
 										</div>
@@ -518,7 +516,7 @@
 									</a>
 								</li>
 								<li class="detail-rs-item">
-									<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="category.html">
+									<a class="detail-rs-item-wrap" title="魅族 X8 高透保护膜" href="details.html">
 										<div class="mod-pic">
 											<img class="lazy" src="https://openfile.meizu.com/group1/M00/05/E1/Cgbj0FtqgmuAHzQbAAflWG0_wvs749.png680x680.jpg" width="180" height="180" draggable="false">
 										</div>
