--- a/src/pages/details.html
+++ b/src/pages/details.html
@@ -16,6 +16,187 @@
     <script src="../assets/javascript/details.js"></script>
 </head>
 <body>
+    <div class="common-header">
+                <div class="header-container">
+                    <div class="top-logo">
+                        <!--联蔚图标-->
+                        <img src="http://www.connext.com.cn/assets/images/logo-pc.png" />
+                    </div>
+                    <div class="top-nav">
+                        <div class="person-information">
+                            <!--头部未登录时状态栏 开始-->
+                            <ul class="unloaded-nav">
+                                <li class="status">
+                                    <a href="loading.html">登录</a>
+                                </li>
+                                <li class="status">
+                                    <a href="register.html">注册</a>
+                                </li>
+                                <!--mini-购物车栏开始-->
+                                <li class="mini-cart">
+                                    <div class="cart-nav">
+                                        <i class="iconfont icon-gouwuche"></i>
+                                        <a href="javascript:void(0);">购物车</a>
+                                        <span>(0)</span>
+                                    </div>
+                                    <!--空购物车开始-->
+                                    <div class="empty-cart">
+                                        <p>购物车中还没有商品，赶紧选购吧！</p>
+                                    </div>
+                                    <!--空购物车结束-->
+                                    <!--购物车toast（有货）开始-->
+                                    <div class="exist-cart">
+                                        <div class="cart-list">
+                                            <div class="cart-item">
+                                                <div class="cart-group">
+                                                    <img src="https://i1.mifile.cn/a1/pms_1513864376.45999722.jpg?width=60&height=60"
+                                                        alt="" />
+                                                    <a href="">联蔚微波炉</a><span class="item-price"><a>123</a>元</span>
+                                                </div>
+                                                <span class="icon iconfont icon-lajixiang cart-close"></span>
+                                            </div>
+                                            <div class="cart-item">
+                                                <div class="cart-group">
+                                                    <img src="https://i1.mifile.cn/a1/pms_1513864376.45999722.jpg?width=60&height=60"
+                                                        alt="" />
+                                                    <a href="">灰太狼平底锅</a><span class="item-price"><a>123</a>元</span>
+                                                </div>
+                                                <span class="icon iconfont icon-lajixiang cart-close"></span>
+                                            </div>
+                                            <div class="cart-item">
+                                                <div class="cart-group">
+                                                    <img src="https://i1.mifile.cn/a1/pms_1513864376.45999722.jpg?width=60&height=60"
+                                                        alt="" />
+                                                    <a href="">联蔚微波炉</a><span class="item-price"><a>123</a>元</span>
+                                                </div>
+                                                <span class="icon iconfont icon-lajixiang cart-close"></span>
+                                            </div>
+                                            <div class="cart-item">
+                                                <div class="cart-group">
+                                                    <img src="https://i1.mifile.cn/a1/pms_1513864376.45999722.jpg?width=60&height=60"
+                                                        alt="" />
+                                                    <a href="">联蔚微波炉</a><span class="item-price"><a>123</a>元</span>
+                                                </div>
+                                                <span class="icon iconfont icon-lajixiang cart-close"></span>
+                                            </div>
+                                            <div class="cart-item">
+                                                <div class="cart-group">
+                                                    <img src="https://i1.mifile.cn/a1/pms_1513864376.45999722.jpg?width=60&height=60"
+                                                        alt="" />
+                                                    <a href="">联蔚微波炉</a><span class="item-price"><a>123</a>元</span>
+                                                </div>
+                                                <span class="icon iconfont icon-lajixiang cart-close"></span>
+                                            </div>
+                                            <div class="cart-item">
+                                                <div class="cart-group">
+                                                    <img src="https://i1.mifile.cn/a1/pms_1513864376.45999722.jpg?width=60&height=60"
+                                                        alt="" />
+                                                    <a href="">联蔚微波炉</a><span class="item-price"><a>123</a>元</span>
+                                                </div>
+                                                <span class="icon iconfont icon-lajixiang cart-close"></span>
+                                            </div>
+                                        </div>
+                                        <div class="cart-payment">
+                                            <div class="cart-left">
+                                                <p>共<em>3</em>件商品</p>
+                                                <span class="cart-price"><em>378</em>元</span>
+                                            </div>
+                                            <div class="cart-right">
+                                                <a class="btn-cart" href="javascript:void(0);">去购物车结算</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!--购物车toast（有货）结束-->
+                                </li>
+                                <!--mini-购物车栏结束-->
+                            </ul>
+                            <!--头部未登录时状态栏 结束-->
+                            <!--头部登录时状态栏 开始-->
+                            <ul class="loaded-nav">
+                                <li class="status">
+                                    <a href="javascript:void(0);">个人昵称</a>
+                                </li>
+                                <!--mini-购物车栏 开始-->
+                                <li class="mini-cart">
+                                    <div class="cart-nav">
+                                        <i class="iconfont icon-gouwuche"></i>
+                                        <a href="javascript:void(0);">购物车</a>
+                                        <span>(0)</span>
+                                    </div>
+                                    <div class="empty-cart">
+                                        <p>购物车中还没有商品，赶紧选购吧！</p>
+                                    </div>
+                                    <!--购物车toast（有货）开始-->
+                                    <div class="exist-cart">
+                                        <div class="cart-list">
+                                            <div class="cart-item">
+                                                <div class="cart-group">
+                                                    <img src="https://i1.mifile.cn/a1/pms_1513864376.45999722.jpg?width=60&height=60"
+                                                        alt="" />
+                                                    <a href="">联蔚微波炉</a><span class="item-price"><a>123</a>元</span>
+                                                </div>
+                                                <span class="icon iconfont icon-lajixiang cart-close"></span>
+                                            </div>
+                                            <div class="cart-item">
+                                                <div class="cart-group">
+                                                    <img src="https://i1.mifile.cn/a1/pms_1513864376.45999722.jpg?width=60&height=60"
+                                                        alt="" />
+                                                    <a href="">灰太狼平底锅</a><span class="item-price"><a>123</a>元</span>
+                                                </div>
+                                                <span class="icon iconfont icon-lajixiang cart-close"></span>
+                                            </div>
+                                            <div class="cart-item">
+                                                <div class="cart-group">
+                                                    <img src="https://i1.mifile.cn/a1/pms_1513864376.45999722.jpg?width=60&height=60"
+                                                        alt="" />
+                                                    <a href="">联蔚微波炉</a><span class="item-price"><a>123</a>元</span>
+                                                </div>
+                                                <span class="icon iconfont icon-lajixiang cart-close"></span>
+                                            </div>
+                                            <div class="cart-item">
+                                                <div class="cart-group">
+                                                    <img src="https://i1.mifile.cn/a1/pms_1513864376.45999722.jpg?width=60&height=60"
+                                                        alt="" />
+                                                    <a href="">联蔚微波炉</a><span class="item-price"><a>123</a>元</span>
+                                                </div>
+                                                <span class="icon iconfont icon-lajixiang cart-close"></span>
+                                            </div>
+                                            <div class="cart-item">
+                                                <div class="cart-group">
+                                                    <img src="https://i1.mifile.cn/a1/pms_1513864376.45999722.jpg?width=60&height=60"
+                                                        alt="" />
+                                                    <a href="">联蔚微波炉</a><span class="item-price"><a>123</a>元</span>
+                                                </div>
+                                                <span class="icon iconfont icon-lajixiang cart-close"></span>
+                                            </div>
+                                            <div class="cart-item">
+                                                <div class="cart-group">
+                                                    <img src="https://i1.mifile.cn/a1/pms_1513864376.45999722.jpg?width=60&height=60"
+                                                        alt="" />
+                                                    <a href="">联蔚微波炉</a><span class="item-price"><a>123</a>元</span>
+                                                </div>
+                                                <span class="icon iconfont icon-lajixiang cart-close"></span>
+                                            </div>
+                                        </div>
+                                        <div class="cart-payment">
+                                            <div class="cart-left">
+                                                <p>共<em>3</em>件商品</p>
+                                                <span class="cart-price"><em>378</em>元</span>
+                                            </div>
+                                            <div class="cart-right">
+                                                <a class="btn-cart" href="javascript:void(0);">去购物车结算</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!--购物车toast（有货）结束-->
+                                </li>
+                                <!--mini-购物车栏 结束-->
+                            </ul>
+                            <!--头部登录时状态栏 开始-->
+                        </div>
+                    </div>
+                </div>
+            </div>
     <!-- 商品主图、基础信息 -->
     <div class="main clearfix">
         <div class="container center">
@@ -226,5 +407,83 @@
             </div>
         </div>
     </section>
+    <!--公共尾部开始-->
+		<div class="common-footer">
+                <div class="footer-container">
+                    <div class="footer-top">
+                        <ul class="footer-service">
+                            <li>
+                                <a href="javascript:void(0);"><img
+                                        src="https://fms.res.meizu.com/dms/2018/07/13/2c69bf7c-2d29-4fd4-852e-0aa497f36f51.png"
+                                        alt="" /><span>满300免运费</span></a>
+                            </li>
+                            <li>
+                                <a href="javascript:void(0);"><img
+                                        src="https://fms.res.meizu.com/dms/2018/07/13/d28eac8b-b915-49dc-9dbd-80884a07d44f.png"
+                                        alt="" /><span>100+ 城市次日送达</span></a>
+                            </li>
+                            <li>
+                                <a href="javascript:void(0);"><img
+                                        src="https://fms.res.meizu.com/dms/2018/07/13/b21f3e65-f7f4-4693-914c-c070faf96770.png"
+                                        alt="" /><span>7天无理由退货</span></a>
+                            </li>
+                            <li>
+                                <a href="javascript:void(0);"><img
+                                        src="https://fms.res.meizu.com/dms/2018/07/13/1998f0da-a439-4e07-9736-e6a1c39fb0ae.png"
+                                        alt="" /><span>15天换货保障</span></a>
+                            </li>
+                            <li>
+                                <a href="javascript:void(0);"><img
+                                        src="https://fms.res.meizu.com/dms/2018/07/13/420825c1-4763-436d-b3e1-721651ccc70c.png"
+                                        alt="" /><span>1年免费保修</span></a>
+                            </li>
+                            <li>
+                                <a href="javascript:void(0);"><img
+                                        src="https://fms.res.meizu.com/dms/2018/07/13/1c5cfeff-1b35-499e-bc2a-1fd29305be69.png"
+                                        alt="" /><span>上门快修</span></a>
+                            </li>
+                        </ul>
+                        <div class="footer-server">
+                            <span>周一至周五 9:00-18:00</span>
+                            <p>400-670-5818</p>
+                        </div>
+                    </div>
+                    <hr class="footer-hr" />
+                    <div class="footer-bottom">
+                        <ul class="footer-links">
+                            <li>
+                                <a href="javascript:void(0);">了解联蔚</a>
+                            </li>
+                            <li>
+                                <a href="javascript:void(0);">加入我们</a>
+                            </li>
+                            <li>
+                                <a href="javascript:void(0);">联系我们</a>
+                            </li>
+                            <li>
+                                <a href="javascript:void(0);">connext</a>
+                            </li>
+                            <li>
+                                <a href="javascript:void(0);">公司地址</a>
+                            </li>
+                            <li>
+                                <a href="javascript:void(0);">问题反馈</a>
+                            </li>
+                            <li>
+                                <a href="javascript:void(0);">线上销售授权名单公示</a>
+                            </li>
+                            <li>
+                                <a href="javascript:void(0);">出版物经营许可证</a>
+                            </li>
+                        </ul>
+                        <div class="footer-certificate">
+                            Copyright © , Connext Co., Ltd. All Rights Reserved.上海联蔚信息科技有限公司　　 隐私 / 使用条款 / 沪公安网备案
+                            33300222000012098号/
+                            <a class="icp" target="_blank" href="http://www.miitbeian.gov.cn">沪ICP备10006391号-54</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--公共尾部结束-->
 </body>
 </html>
