--- a/src/pages/getOrderInfo.html
+++ b/src/pages/getOrderInfo.html
@@ -303,7 +303,7 @@
                             <input type="text" id="name" class="name"  placeholder="请输入姓名">
                         </div>
                         <div class="top-right"><span>收货人手机号码</span>
-                            <input class="number"  id="number"  placeholder="请输入手机号码" maxlength="11">
+                            <input type="text" class="number"  id="number"  placeholder="请输入手机号码" maxlength="11">
                         </div>
                     </div>
                     <div class="middle">
