--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -636,5 +636,6 @@
 		<!--返回顶部-->
 	</div>
 	<script type="text/javascript" src="../assets/javascript/index.js"></script>
+	<script type="text/javascript" src="../assets/javascript/minicart.js"></script>
 </body>
 </html>
