--- a/src/pages/category.html
+++ b/src/pages/category.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="../assets/styles/iconfont.css">
     <link rel="stylesheet" type="text/css" href="../assets/styles/category.css" />
     <script src="../assets/javascript/jquery.min.js"></script>
+    <script src="../assets/javascript/minicart.js"></script>
 </head>
 <body>
  <!--公共头部 开始-->
