--- a/src/pages/getOrderInfo.html
+++ b/src/pages/getOrderInfo.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="../assets/styles/getOrderInfo.css" />
     <link rel="stylesheet" type="text/css" href="../assets/styles/iconfont.css" />
     <script src="../assets/javascript/jquery.min.js"></script>
+    <script src="../assets/javascript/minicart.js"></script>
 </head>
 <body>
        <!--公共头部 开始-->
