--- a/src/pages/getOrderInfo.html
+++ b/src/pages/getOrderInfo.html
@@ -112,11 +112,11 @@
                                             <p class="product-detail">全网公开版 耀黑</p>
                                         </div>
                                     </th>
-                                    <th class="price"><span>￥</span>1000</th>
+                                    <th class="price">￥<span>1000</span></th>
                                     <th class="num">1</th>
-                                    <th class="total"><span class="money-color">￥</span>1000</th>
+                                    <th class="total">￥<span class="money-color">1000</span></th>
                                     <th class="express" rowspan="999">
-                                        <p>0.00元</p>
+                                        <p><span>0.00</span>元</p>
                                     </th>
                                 </tr>
                                 <tr>
@@ -127,9 +127,9 @@
                                             <p class="product-detail">全网公开版 耀黑</p>
                                         </div>
                                     </th>
-                                    <th class="price"><span>￥</span>1000</th>
+                                    <th class="price">￥<span>1000</span></th>
                                     <th class="num">1</th>
-                                    <th class="total"><span class="money-color">￥</span>1000</th>
+                                    <th class="total">￥<span class="money-color">1000</span></th>
                                 </tr>
                                 <tr>
                                     <th class="name">
@@ -139,9 +139,9 @@
                                             <p class="product-detail">全网公开版 耀黑</p>
                                         </div>
                                     </th>
-                                    <th class="price"><span>￥</span>1000</th>
+                                    <th class="price">￥<span>1000</span></th>
                                     <th class="num">1</th>
-                                    <th class="total"><span class="money-color">￥</span>1000</th>
+                                    <th class="total">￥<span class="money-color">1000</span></th>
                                 </tr>
                             </tbody>
                             <tfoot class="tfoot">
@@ -149,7 +149,7 @@
                                     <td class="info" colspan="3">
                                         发票抬头：默认为收货人姓名
                                     </td>
-                                    <td class="product-total" colspan="2">合计：<span class="price"><span class="money-all">￥</span>1000</span></td>
+                                    <td class="product-total" colspan="2">合计：<span class="price">￥<span class="money-all">1000</span></span></td>
                                 </tr>
                                 <tr class="order-product-remark">
                                     <td colspan="5"><span class="more">备注:</span><input class="title"></td>
@@ -186,16 +186,16 @@
                     <!-- 产品部分的尾部 -->
                     <div class="order-tatal-content">
                         <div class="order-tatal-row">总金额：
-                            <div class="order-tatal-price"><span>￥</span>1000</div>
+                            <div class="order-tatal-price">￥<span>1000</span></div>
                         </div>
                         <div class="order-tatal-row">
                                 运费：
-                            <div class="order-tatal-price"><span>￥</span>0.00</div>
+                            <div class="order-tatal-price">￥<span>0.00</span></div>
                         </div>
                         <div class="line"></div>
                         <div class="order-tatal-row total">
                             应付：
-                            <div class="order-tatal-price total"><span class="money-all">￥</span>1000</div>
+                            <div class="order-tatal-price total">￥<span class="money-all">1000</span></div>
                         </div>
                         <div class="order-tatal-row">
                             <button class="money">下单并支付</button>
