--- a/src/pages/getOrderInfo.html
+++ b/src/pages/getOrderInfo.html
@@ -284,6 +284,12 @@
             </div>
         </div>
         <!--公共尾部结束-->
+        <!--返回顶部-->
+        <div id="topbar">
+            <a href="javascript:window.scrollTo(0,0); " class="iconfont icon-xiangshangjiantou "></a>
+            <a href="javascript:window.scrollTo(0,0); " class="top-tip ">TOP</a>
+        </div>
+			<!--返回顶部-->
         <!-- 弹窗部分 -->
         <div id="background" class="back">
             <div id="div1" class="content">
